# Seraph

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TASK.md
Sandbox/: CMakeLists.txt
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  ExampleScene.cpp  ExampleScene.h  SandboxApp.cpp
Seraph/: CMakeLists.txt
Seraph-Editor/: CMakeLists.txt
Seraph-Editor/src/: EditorApp.cpp
Seraph-Runtime/: CMakeLists.txt
Seraph-Runtime/src/: RuntimeApp.cpp
Seraph/src/: Events.h  Seraph.h  config.h.in
Seraph/src/Platform/: FileDialog.cpp  FileDialog.h  FileReader.cpp  FileReader.h  FileWatcher.cpp  FileWatcher.h  Process.cpp  Process.h  Window.cpp  Window.h
Seraph/src/Seraph/Asset/: Asset.cpp  Asset.h  AssetHandle.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.h  AssetMetadata.h  AssetRef.cpp  AssetRef.h  AssetSerializer.h  AssetSource.cpp  AssetSource.h  AssetStatus.h  EditorAssetManager.cpp  EditorAssetManager.h
Seraph/src/Seraph/Console/: AnyTextCodec.cpp  AnyTextCodec.h  AutoCVar.cpp  AutoCVar.h  Console.cpp  Console.h  ConsoleCommand.cpp  ConsoleCommand.h  ConsoleDemo.cpp  ConsoleEvaluator.cpp  ConsoleEvaluator.h  ConsolePanel.cpp  ConsolePanel.h  ConsoleSink.cpp  ConsoleSink.h
Seraph/src/Seraph/Core/: Application.cpp  Application.h  Assert.h  Base.h  BiMap.h  Buffer.h  CommandLine.cpp  CommandLine.h  Core.cpp  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  GlmCustomFormatters.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiSystem.cpp  ImGuiSystem.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogCustomFormatters.h  Memory.cpp  Memory.h  Ref.cpp  Ref.h  Transform.cpp  Transform.h  UUID.cpp  UUID.h  Version.h  World.cpp  World.h
Seraph/src/Seraph/Editor/: AssetFactory.cpp  AssetFactory.h  AssetInfo.cpp  AssetInfo.h  AssetPayload.h  ContentTree.cpp  ContentTree.h  DisplayName.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EntityPayload.h  EntityPicker.cpp  EntityPicker.h  PropertyDrawer.cpp  PropertyDrawer.h  ThumbnailService.cpp  ThumbnailService.h
Seraph/src/Seraph/Events/: KeyEvent.h  MouseEvent.h  Seraph.h  WindowEvent.h
Seraph/src/Seraph/Graphics/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  EnvironmentMap.cpp  EnvironmentMap.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  RenderPass.cpp  RenderPass.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SceneCamera.cpp  SceneCamera.h  SceneRenderer.cpp  SceneRenderer.h  ShaderAsset.cpp  ShaderAsset.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderIncluder.h  ShaderManager.cpp  ShaderManager.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  ViewId.h
Seraph/src/Seraph/Math/: Math.cpp  Math.h
Seraph/src/Seraph/Physics/: CharacterController.h  PhysicsBody.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsSettings.cpp  PhysicsSettings.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h  SceneQueries.h
Seraph/src/Seraph/Project/: GamePackager.cpp  GamePackager.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  ProjectTemplates.h
Seraph/src/Seraph/Reflection/: Annotations.h  Any.h  Reference.h  Reflect.h  Reflection.cpp  Reflection.h  Type.h  TypeId.h  TypeRegistry.h
Seraph/src/Seraph/Runtime/: RuntimeLayer.cpp  RuntimeLayer.h
Seraph/src/Seraph/Scene/: CopyableComponents.h  Entity.cpp  Entity.h  EntityRef.cpp  EntityRef.h  EntityTemplates.h  Scene.cpp  Scene.h  SceneAsset.cpp  SceneAsset.h  SceneEnvironment.h
Seraph/src/Seraph/Scripts/: ScriptComponent.h  ScriptEngine.cpp  ScriptEngine.h  ScriptLibrary.cpp  ScriptLibrary.h  ScriptRegistry.cpp  ScriptRegistry.h  ScriptTypes.cpp  ScriptTypes.h  ScriptableEntity.cpp  ScriptableEntity.h
Seraph/src/Seraph/Settings/: ISettingsStore.h  SettingDescriptor.h  Settings.cpp  Settings.h  YamlSettingsStore.cpp  (+1 more)
Seraph/src/bgfx-imgui/: imgui_impl_bgfx.cpp
Seraph/src/core/: Application.cpp  Application.h  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Math.h
Seraph/src/events/: MouseEvent.h  WindowEvent.h
Seraph/src/graphics/: Camera.cpp  Mesh.cpp
Seraph/src/platform/: Window.cpp
Tools/SeraphHeaderTool/: .clangd  CMakeLists.txt  README.md
Tools/SeraphHeaderTool/src/: main.cpp
Tools/SeraphHeaderTool/test/: BadBitfield.h  BadPrivate.h  GenSample.h  SampleReflected.h
projects/Sandbox/: CMakeLists.txt  CMakePresets.json  Sandbox.sproj
projects/Sandbox/assets/: AssetRegistry.srr  ProjectSettings.yaml
projects/Sandbox/src/: ConsoleDemo.cpp  Player.cpp  Player.h  RotatorScript.cpp  RotatorScript.h  Spinner.cpp  Spinner.h
src/: CMakeLists.txt  Seraph.h  ShaderIncluder.h  config.h.in  main.cpp
src/bgfx-imgui/: imgui_impl_bgfx.cpp
src/core/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Transform.cpp  Transform.h
src/events/: Event.h  KeyEvent.h
src/ext/: stb_image.cpp
src/graphics/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  TextureAtlas.cpp  TextureAtlas.h
src/graphics/material/: ColorProperty.cpp  ColorProperty.h  FloatProperty.cpp  FloatProperty.h  Material.cpp  Material.h  MaterialProperty.h  TextureProperty.cpp  TextureProperty.h  Vector3Property.cpp  Vector3Property.h  Vector4ArrayProperty.cpp  Vector4ArrayProperty.h  Vector4Property.cpp  Vector4Property.h
src/platform/: FileReader.cpp  FileReader.h  Window.cpp  Window.h
src/resources/: AnimatedTexture.cpp  AnimatedTexture.h  AnimationParser.cpp  AnimationParser.h  BakedModel.h  BlockElement.h  BlockFace.h  BlockModel.h  BlockModelLoader.cpp  BlockModelLoader.h  BlockStateLoader.cpp  BlockStateLoader.h  ModelBakery.cpp  ModelBakery.h  ResourcePack.cpp  ResourcePack.h  TextureAtlasBuilder.cpp  TextureAtlasBuilder.h  TextureManager.cpp  TextureManager.h
src/world/: Block.cpp  Block.h  BlockState.cpp  BlockState.h  Blocks.cpp  Blocks.h  Chunk.cpp  Chunk.h  GrassBlock.cpp  GrassBlock.h
(+219 files in other folders)
