cmake_minimum_required(VERSION 3.30)
project(Sandbox CXX)
set(CMAKE_CXX_STANDARD 20)

# The Seraph engine you built. CMakePresets.json passes -DSeraph_DIR; or set it
# yourself: -DSeraph_DIR=<engine-build-dir> (where SeraphConfig.cmake lives).
find_package(Seraph REQUIRED)

file(GLOB_RECURSE GAME_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")

# libGame: this project's native C++ gameplay scripts. Loaded at runtime by the
# editor/runtime via SDL_LoadObject (NOT linked into them); its SP_REGISTER_SCRIPT
# initializers register into libSeraph's ScriptRegistry on load.
add_library(Game SHARED ${GAME_SOURCES})
target_link_libraries(Game PRIVATE Seraph::Seraph)

# rpath: the engine bin (dev-time load) + @loader_path/.. (so a PACKAGED libGame,
# which sits in <game>/cache/, finds libSeraph one dir up next to the exe).
if (APPLE)
    set(GAME_RPATH "@loader_path/..;@loader_path;${SERAPH_ENGINE_BUILD_DIR}/bin")
elseif (UNIX)
    set(GAME_RPATH "$ORIGIN/..;$ORIGIN;${SERAPH_ENGINE_BUILD_DIR}/bin")
endif ()
set_target_properties(Game PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/cache"
    BUILD_RPATH   "${GAME_RPATH}"
    INSTALL_RPATH "${GAME_RPATH}"
    DEBUG_POSTFIX "")

# IDE run targets (the green "Run" arrow):
#   RunEditor   — open this project in the Seraph editor
#   PackageGame — build a runnable, distributable game folder
#
# These are real executables, not custom targets, so the IDE "Run" button can
# launch them: a custom target has no executable artifact, so Run does nothing
# and only Build/hammer fires its command. Each launcher just exec()s the
# prebuilt editor. The sources are (re)generated on every configure so the
# baked-in editor path stays current, and land in the build tree (never the
# source tree). EXCLUDE_FROM_ALL keeps them out of a plain "build all".
set(SERAPH_SPROJ "${CMAKE_CURRENT_SOURCE_DIR}/Sandbox.sproj")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/launch/RunEditor.cpp"
"// Generated by CMake — launches the Seraph editor. Do not edit.
#if defined(_WIN32)
#  include <process.h>
#else
#  include <unistd.h>
#endif
int main()
{
    const char* argv[] = { \"${SERAPH_EDITOR_EXECUTABLE}\", \"--project\", \"${SERAPH_SPROJ}\", 0 };
#if defined(_WIN32)
    return (int) _spawnv(_P_WAIT, argv[0], (const char* const*) argv);
#else
    execv(argv[0], (char* const*) argv);
    return 127; // exec only returns on failure
#endif
}
")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/launch/PackageGame.cpp"
"// Generated by CMake — packages the game via the Seraph editor. Do not edit.
#if defined(_WIN32)
#  include <process.h>
#else
#  include <unistd.h>
#endif
int main()
{
    const char* argv[] = { \"${SERAPH_EDITOR_EXECUTABLE}\", \"--package\", \"${SERAPH_SPROJ}\", 0 };
#if defined(_WIN32)
    return (int) _spawnv(_P_WAIT, argv[0], (const char* const*) argv);
#else
    execv(argv[0], (char* const*) argv);
    return 127;
#endif
}
")
add_executable(RunEditor   EXCLUDE_FROM_ALL "${CMAKE_CURRENT_BINARY_DIR}/launch/RunEditor.cpp")
add_executable(PackageGame EXCLUDE_FROM_ALL "${CMAKE_CURRENT_BINARY_DIR}/launch/PackageGame.cpp")
